syntax = "proto3";

package file;

service FileService {
    rpc GenerateKey(GenerateKeyRequest) returns (KeyResponse) {}
    rpc GetFileByID(GetByFileByIDRequest) returns (File) {}
    rpc GetFileByKey(GetFileByKeyRequest) returns (File) {}
    rpc GetFilesByFolder(GetFilesByFolderRequest) returns (GetFilesByFolderResponse) {}
    rpc CreateFile(CreateFileRequest) returns (File) {}
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {}
    rpc UpdateFile(UpdateFileRequest) returns (File) {}
    rpc IsAllowed(IsAllowedRequest) returns (IsAllowedResponse) {}
}

message GenerateKeyRequest {
}

message KeyResponse {
    string key = 1;
}

message GetByFileByIDRequest {
    string id = 1;
}

message GetFileByKeyRequest {
    string key = 1;
}

message GetFilesByFolderRequest {
    string folderID = 1;
}

message GetFilesByFolderResponse {
    repeated File files = 1;
}

message CreateFileRequest {
    string key = 1;
    string fullName = 2;
    int64 size = 3;
    string type = 4;
    string ownerID = 5;
    string bucket = 6;
    string parent = 7;
    string appID = 8;
}

message DeleteFileRequest {
    string id = 1;
}

message DeleteFileResponse {
    bool ok = 1;
}

message UpdateFileRequest {
    string fullName = 2;
    int64 size = 3;
    string ownerID = 5;
    string parent = 6;
    string appID = 7;
    string bucket = 11;
}

message IsAllowedRequest {
    string fileID = 1;
    string userID = 2;
}

message IsAllowedResponse {
    bool allowed = 1;
}

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string mail = 4;
}

message App {
    string id = 1;
    string name = 2;
}

message File {
    string id = 1;
    string key = 2;
    string fullName = 3;
    string type = 4;
    string description = 5;
    string ownerID = 6;
    int64 size = 7;
    FileOrID parent = 10;
    string bucket = 11;
    string createdAt = 15;
    string updatedAt = 16;
}

message FileOrID {
    oneof fileField {
        string fileID = 1;
        File fileObject = 2;
    }
}

